[tool.poetry]
name = "trafikkmeldinger"
version = "0.1.0"
description = ""
authors = ["Martin Høy <marhoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.27.1"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
Jinja2 = "^3.1.2"
requests-cache = "^1.0.1"
loguru = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pydocstyle = "^6.1.1"
pre-commit = "^3.3.3"
types-requests = "^2.27.28"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

# pytest configuration
[tool.pytest.ini_options]
addopts = "--cov-report term-missing:skip-covered --cov=trafikkmeldinger"
