[tool.poetry]
name = "trafikkmeldinger"
version = "0.1.0"
description = ""
authors = ["Martin Høy <marhoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
requests = "^2.27.1"
requests-cache = "^1.0.1"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
Jinja2 = "^3.1.2"
beautifulsoup4 = "^4.12.3"
sqlmodel = "^0.0.16"
pandas = "^2.2.1"
schedule = "^1.2.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.13.0"
pytest = "^8.0"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"
pydocstyle = "^6.1.1"
pre-commit = "^3.3.3"
types-requests = "^2.27.28"
lxml-stubs = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

# pytest configuration
[tool.pytest.ini_options]
addopts = "--cov-report term-missing:skip-covered --cov=trafikkmeldinger"

# Mypy configuration
[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Ignore missing stubs from some packages
#[[tool.mypy.overrides]]
#module = ["lxml*"]
#ignore_missing_imports = true
