[tool.poetry]
name = "trafikkmeldinger"
version = "0.1.0"
description = ""
authors = ["Martin Høy <marhoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.5.2"
pydantic = "^2.9.2"
requests = "^2.27.1"
requests-cache = "^1.0.1"
sqlmodel = "^0.0.22"
Jinja2 = "^3.1.2"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.13.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
httpx = "^0.27.2"
pre-commit = "^3.3.3"
types-requests = "^2.27.28"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Consider packages in the src directory as first-party code
src = ["src"]
# Run ruff on Notebooks as well
extend-include = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
# Allow the use of assert in tests
"tests/*" = ["S101"]

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle
    "W",   # pycodestyle
    "I",   # isort
    "ICN", # flake8-import-conventions
    "D",   # pydocstyle
    "N",   # pep8-naming
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "FA",  # flake8-future-annotations
    "ISC", # flake8-implicit-str-concat
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "PTH", # flake8-use-pathlib
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
    "PD",  # pandas-vet
    # "FAST", # FastAPI
]
ignore = [
    "ISC001", # may cause conflicts when used with the formatter
]

[tool.ruff.lint.pydocstyle]
convention = "google"


# mypy configuration, taken from pydantic documentation
[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# pytest configuration
[tool.pytest.ini_options]
addopts = "--cov-report term-missing:skip-covered --cov=trafikkmeldinger"
